(feat) receipt store and get to and from db
